fix:clipping with fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,7 @@
   --font-mono: var(--font-plex-mono);
   --font-mono--font-feature-settings: "ss02", "zero";
   --font-ubuntu-mono: var(--font-ubuntu-mono);
+  --animate-fade-in: fade-in 300ms forwards;
 }
 
 @theme {
